buttons on listing tiles on mobile positioning corrected

--- a/css/listingTile.css
+++ b/css/listingTile.css
@@ -48,7 +48,7 @@
 	margin-bottom: 10px;
 	font-weight: bold;
 }
-.listingTile .listingButtons {
+.listingButtons {
 	margin: 10px auto;
 	width:90%;
 }
@@ -95,12 +95,13 @@
 		width: 49%;
 		height:auto;
 	}
-	.listingButtons{
-		width: 100%;
+	.listingButtons {
 		clear: both;
-		left: 0;
 		position: absolute;
-		bottom: 0;
+		left: 0;
+		right: 0;
+		bottom: 10px;
+		margin: 0 auto;
 	}
 	.listingButtons .primaryBtn {
 		height: 36px;
@@ -110,6 +111,7 @@
 		left: 0;
 		bottom: 0;
 		padding: 0 10px;
+		margin: 0;
 	}
 	.listingButtons .secondaryBtn {
 		height: 36px;
@@ -118,5 +120,6 @@
 		left: 51%;
 		text-align: center;
 		bottom: 0;
+		margin: 0;
 	}
 }
